[gd_scene load_steps=3 format=3 uid="uid://bnk32gyp3bsir"]

[ext_resource type="Script" path="res://scripts/scenes/home_base.gd" id="1_07xob"]
[ext_resource type="Script" path="res://scripts/managers/pause_manager.gd" id="2_5cg8f"]

[node name="HomeBase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_07xob")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 105
text = "Home base"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 40
columns = 2

[node name="AdventureButton" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
theme_override_font_sizes/font_size = 87
text = "Go on an adventure"

[node name="DecoderButton" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
theme_override_font_sizes/font_size = 87
text = "Decode cards"

[node name="StoneButton" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
theme_override_font_sizes/font_size = 87
text = "Magical stone"

[node name="LoadoutButton" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
theme_override_font_sizes/font_size = 87
text = "Deck and inventory"

[node name="PauseManager" type="Node" parent="."]
script = ExtResource("2_5cg8f")

[connection signal="pressed" from="VBoxContainer/GridContainer/AdventureButton" to="." method="_on_adventure_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/DecoderButton" to="." method="_on_decoder_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/StoneButton" to="." method="_on_stone_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/LoadoutButton" to="." method="_on_loadout_button_pressed"]
